Hopefully last debug of classify

--- a/DR10.ipynb
+++ b/DR10.ipynb
@@ -607,16 +607,19 @@
        " Column('maggies_2', FLOAT(), table=None),\n",
        " Column('maggies_3', FLOAT(), table=None),\n",
        " Column('maggies_4', FLOAT(), table=None),\n",
+       " Column('maggies_5', FLOAT(), table=None),\n",
        " Column('maggies_unc_0', FLOAT(), table=None),\n",
        " Column('maggies_unc_1', FLOAT(), table=None),\n",
        " Column('maggies_unc_2', FLOAT(), table=None),\n",
        " Column('maggies_unc_3', FLOAT(), table=None),\n",
        " Column('maggies_unc_4', FLOAT(), table=None),\n",
+       " Column('maggies_unc_5', FLOAT(), table=None),\n",
        " Column('maggies_fit_0', FLOAT(), table=None),\n",
        " Column('maggies_fit_1', FLOAT(), table=None),\n",
        " Column('maggies_fit_2', FLOAT(), table=None),\n",
        " Column('maggies_fit_3', FLOAT(), table=None),\n",
        " Column('maggies_fit_4', FLOAT(), table=None),\n",
+       " Column('maggies_fit_5', FLOAT(), table=None),\n",
        " Column('zred_med', FLOAT(), table=None),\n",
        " Column('dust2_med', FLOAT(), table=None),\n",
        " Column('tau_med', FLOAT(), table=None),\n",
@@ -659,9 +662,108 @@
    },
    "outputs": [],
    "source": [
-    "# engine = create_engine(util.conn_string)\n",
-    "# util.bookkeeping_setup('dr10_training', data=clean_lensed, train=True,\n",
-    "#                        tag='lensed_original', engine=engine)"
+    "engine = create_engine(util.conn_string)\n",
+    "util.bookkeeping_setup('dr10_training', data=clean_lensed, train=True,\n",
+    "                       tag='lensed_original', engine=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c080be3-2020-41d5-b15c-cae8f185634c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecca724b-cffa-4520-8d77-0993b672d114",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d8f5c405-2154-4aa1-96d4-23fca1a00d93",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['SPS_HOME'] = \"/global/homes/e/eramey16/fsps\"\n",
+    "from docker import classify, util\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.pool import NullPool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6180b015-1c37-4412-b804-c971adaba6bd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "engine = sqlalchemy.create_engine(util.conn_string, poolclass=NullPool)\n",
+    "bkdata, tbldata = classify.get_galaxy(10995435681361334, engine=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bb26a9f5-969b-441a-9a8b-1e7f188445a4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object found: 10995435681361334\n",
+      "Redshift: 0.17203856\n",
+      "> \u001b[0;32m/global/u1/e/eramey16/galactic_lenses/docker/classify.py\u001b[0m(203)\u001b[0;36mmerge_prospector\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m    201 \u001b[0;31m    \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m    202 \u001b[0;31m    \u001b[0;31m# Run Prospector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m--> 203 \u001b[0;31m    \u001b[0;32mif\u001b[0m \u001b[0mh5_file\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mh5_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf'{output_dir}/{basic_data.ls_id}.h5'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m    204 \u001b[0;31m    \u001b[0;32mif\u001b[0m \u001b[0mredo\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh5_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m    205 \u001b[0;31m        \u001b[0mh5_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_prospector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbasic_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mls_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmag_uncs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mh5_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  c\n"
+     ]
+    }
+   ],
+   "source": [
+    "h5_file = '/pscratch/sd/e/eramey16/data/monocle/test/10995435681361334.h5'\n",
+    "data = classify.merge_prospector(tbldata, h5_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "154248da-f52f-48ad-bc64-b02ed952380c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ls_id', 'ra', 'dec', 'type', 'dered_mag_g', 'dered_mag_r', 'dered_mag_i', 'dered_mag_z', 'dered_mag_w1', 'dered_mag_w2', 'dered_flux_g', 'dered_flux_r', 'dered_flux_i', 'dered_flux_z', 'dered_flux_w1', 'dered_flux_w2', 'g_r', 'i_z', 'r_i', 'r_z', 'w1_w2', 'z_w1', 'snr_g', 'snr_r', 'snr_i', 'snr_z', 'snr_w1', 'snr_w2', 'flux_ivar_g', 'flux_ivar_r', 'flux_ivar_i', 'flux_ivar_z', 'flux_ivar_w1', 'flux_ivar_w2', 'dchisq_1', 'dchisq_2', 'dchisq_3', 'dchisq_4', 'dchisq_5', 'rchisq_g', 'rchisq_r', 'rchisq_i', 'rchisq_z', 'rchisq_w1', 'rchisq_w2', 'sersic', 'sersic_ivar', 'psfsize_g', 'psfsize_r', 'psfsize_z', 'shape_r', 'shape_e1', 'shape_e2', 'shape_r_ivar', 'shape_e1_ivar', 'shape_e2_ivar', 'z_phot_median', 'z_phot_std', 'z_spec', 'maggies_0', 'maggies_1', 'maggies_2', 'maggies_3', 'maggies_4', 'maggies_5', 'maggies_unc_0', 'maggies_unc_1', 'maggies_unc_2', 'maggies_unc_3', 'maggies_unc_4', 'maggies_unc_5', 'maggies_fit_0', 'maggies_fit_1', 'maggies_fit_2', 'maggies_fit_3', 'maggies_fit_4', 'maggies_fit_5', 'zred_med', 'dust2_med', 'tau_med', 'tmax_med', 'massmet_1_med', 'massmet_2_med', 'zred_sig_minus', 'dust2_sig_minus', 'tau_sig_minus', 'tmax_sig_minus', 'massmet_1_sig_minus', 'massmet_2_sig_minus', 'zred_sig_plus', 'dust2_sig_plus', 'tau_sig_plus', 'tmax_sig_plus', 'massmet_1_sig_plus', 'massmet_2_sig_plus', 'chisq_maggies']\n"
+     ]
+    }
+   ],
+   "source": [
+    "classify.update_db(bkdata, data, engine=engine)"
    ]
   },
   {
@@ -1164,7 +1266,7 @@
     "engine = create_engine(util.conn_string)\n",
     "conn = engine.connect()\n",
     "\n",
-    "existing_lensed = pd.DataFrame(conn.execute(\"SELECT * from lensed_dr10\"))\n",
+    "existing_lensed = pd.DataFrame(conn.execute(\"SELECT * from dr10_training\"))\n",
     "conn.close()\n",
     "existing_lensed"
    ]
