Fixed NaN issue with DB

--- a/DR10.ipynb
+++ b/DR10.ipynb
@@ -65,6 +65,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "e4747e8e-a2cf-47a4-a68e-b3f5495b8112",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1.0\n",
+       "1    None\n",
+       "2     3.0\n",
+       "Name: a, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = pd.DataFrame({'a':[1, np.nan, 3], 'b':[4, 5,np.nan]})\n",
+    "x = x.replace(np.nan, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "1d768218-e82c-4397-8b3b-39b760ac38b8",
    "metadata": {
