Committing minor changes

--- a/Test_ML.ipynb
+++ b/Test_ML.ipynb
@@ -984,8 +984,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eea48b86-5dd9-4dea-b843-d9946b4f6269",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[1.3434, 2.98459, 3.8937493, 4.57845, 5.387847]'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [1.3434, 2.98459, 3.8937493, 4.57845, 5.387847]\n",
+    "str(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "678547f5-63ea-4303-91a7-f43289be4ac9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x = {'a': 1, 'b': 2}\n",
+    "y = {'c': 3, **x}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b8e8c2f3-59fc-449f-9f5f-ff0ad4c6a767",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'c': 3, 'a': 1, 'b': 2}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab6c23c2-c427-418e-a3bc-0283e312d3a9",
    "metadata": {},
    "outputs": [],
    "source": []
