Working state w/extra samples and inflated errors

--- a/Test_Prospector.ipynb
+++ b/Test_Prospector.ipynb
@@ -1,6 +1,424 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0eabd4fb-89b6-46c6-8d02-43fb21285874",
+   "metadata": {},
+   "source": [
+    "# Testing Prospector Model & Likelihood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "50493c9d-f06d-4a3f-933b-05205c3d517a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "os.environ[\"SPS_HOME\"] = '/global/homes/e/eramey16/fsps/'\n",
+    "h5_file = os.path.expandvars(\"$SCRATCH/data/monocle/test/10995462702105256.h5\")\n",
+    "\n",
+    "from docker import param_monocle as param\n",
+    "from docker import classify\n",
+    "import prospect.io.read_results as reader\n",
+    "import h5py\n",
+    "import pickle\n",
+    "import dynesty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2a766c27-0fbb-40ad-868f-79bc4681e41b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded observation\n",
+      "Loaded SPS libraries\n"
+     ]
+    }
+   ],
+   "source": [
+    "res1, _, _ = reader.results_from(h5_file)\n",
+    "\n",
+    "mag_unc_1 = np.array([0.005395851583585794, 0.0034580493543346622, 0.004425482546800575,\n",
+    "                 0.004152162899013791, 0.011291867461568727, 0.04210798998385776])*5\n",
+    "args_1 = {\n",
+    "    \"mag_in\": [20.717947, 19.274029, 18.668655, 18.314737, 17.77136, 18.470882],\n",
+    "    \"mag_unc_in\": mag_unc_1,\n",
+    "    \"object_redshift\": None,\n",
+    "}\n",
+    "run_params = param.run_params\n",
+    "obs_1, model_1, sps_1, noise_model_1 = param.load_all(args=args_1, **run_params)\n",
+    "spec_noise_1, phot_noise_1 = noise_model_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "20982c06-01a4-4486-93b9-c79cd57ad84f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded observation\n",
+      "Loaded SPS libraries\n"
+     ]
+    }
+   ],
+   "source": [
+    "mag_unc_2 = np.array([0.005395851583585794, 0.0034580493543346622, 0.004425482546800575,\n",
+    "                 0.004152162899013791, 0.011291867461568727, 0.04210798998385776])\n",
+    "args_2 = {\n",
+    "    \"mag_in\": [20.717947, 19.274029, 18.668655, 18.314737, 17.77136, 18.470882],\n",
+    "    \"mag_unc_in\": mag_unc_2,\n",
+    "    \"object_redshift\": None,\n",
+    "}\n",
+    "\n",
+    "obs_2, model_2, sps_2, noise_model_2 = param.load_all(args=args_2, **run_params)\n",
+    "spec_noise_2, phot_noise_2 = noise_model_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "781f48bc-c7c5-46ca-8b93-eb081022f8c6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def loglikelihood1(theta_vec):\n",
+    "    return param.lnprobfn(theta_vec, model=model_1, obs=obs_1, def_sps=sps_1,\n",
+    "                          def_noise_model=noise_model_1)\n",
+    "def loglikelihood2(theta_vec):\n",
+    "    return param.lnprobfn(theta_vec, model=model_2, obs=obs_2, def_sps=sps_2, \n",
+    "                          def_noise_model=noise_model_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c8b1290f-ae94-487f-8d93-f0d23f36e0b8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-261159996.25403342, -543201163.3229702)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loglikelihood1(res1['chain'][0,:]), loglikelihood2(res1['chain'][0,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "50dba2b9-cf06-4d9d-89aa-e068d76ed030",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with open('10995462702105256.pkl', 'rb') as file:\n",
+    "    dres = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f6065561-ee56-48c4-b0ba-96f06bf4048c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = dres['samples'].shape[0]\n",
+    "logl2 = [loglikelihood2(dres['samples'][i]) for i in range(N)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1b0c9248-5648-420f-b154-de956b704a0e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "blob",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dres_rwt \u001b[38;5;241m=\u001b[39m \u001b[43mdynesty\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreweight_run\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdres\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlogp_new\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlogl2\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.conda/envs/myprospector/lib/python3.9/site-packages/dynesty/utils.py:1000\u001b[0m, in \u001b[0;36mreweight_run\u001b[0;34m(res, logp_new, logp_old)\u001b[0m\n\u001b[1;32m    991\u001b[0m \u001b[38;5;66;03m# Overwrite items with our new estimates.\u001b[39;00m\n\u001b[1;32m    992\u001b[0m substitute \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    993\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlogvol\u001b[39m\u001b[38;5;124m'\u001b[39m: logvol,\n\u001b[1;32m    994\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlogwt\u001b[39m\u001b[38;5;124m'\u001b[39m: saved_logwt,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    997\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mh\u001b[39m\u001b[38;5;124m'\u001b[39m: saved_h\n\u001b[1;32m    998\u001b[0m }\n\u001b[0;32m-> 1000\u001b[0m new_res \u001b[38;5;241m=\u001b[39m \u001b[43mresults_substitute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mres\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubstitute\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1001\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m new_res\n",
+      "File \u001b[0;32m~/.conda/envs/myprospector/lib/python3.9/site-packages/dynesty/results.py:408\u001b[0m, in \u001b[0;36mresults_substitute\u001b[0;34m(results, kw_dict)\u001b[0m\n\u001b[1;32m    406\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    407\u001b[0m         new_list\u001b[38;5;241m.\u001b[39mappend((k, kw_dict[k]))\n\u001b[0;32m--> 408\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mResults\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_list\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.conda/envs/myprospector/lib/python3.9/site-packages/dynesty/results.py:309\u001b[0m, in \u001b[0;36mResults.__init__\u001b[0;34m(self, key_values)\u001b[0m\n\u001b[1;32m    307\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m key_values_list:\n\u001b[1;32m    308\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m (k \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_keys)  \u001b[38;5;66;03m# ensure no duplicates\u001b[39;00m\n\u001b[0;32m--> 309\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m Results\u001b[38;5;241m.\u001b[39m_ALLOWED, k\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_keys\u001b[38;5;241m.\u001b[39mappend(k)\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;28msetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, k, copy\u001b[38;5;241m.\u001b[39mcopy(v))\n",
+      "\u001b[0;31mAssertionError\u001b[0m: blob"
+     ]
+    }
+   ],
+   "source": [
+    "dres_rwt = dynesty.utils.reweight_run(dres, logp_new=logl2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3f48b74-9663-444d-886e-476fae1f85f0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "len(dres['samples'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7e318a0-fbde-4e58-97ad-06d90a283a2d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "res1['chain']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e59a493e-b316-41cb-a28c-ec8d8ac8cd39",
+   "metadata": {},
+   "source": [
+    "# Tutorial on importance re-weighting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e9e608cf-1ec0-447b-8414-cb6a66cceb65",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# system functions that are always useful to have\n",
+    "import time, sys, os\n",
+    "\n",
+    "# basic numeric setup\n",
+    "import numpy as np\n",
+    "from numpy import linalg\n",
+    "\n",
+    "# inline plotting\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# plotting\n",
+    "import matplotlib\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "# seed the random number generator\n",
+    "rstate = np.random.default_rng(510)\n",
+    "import dynesty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dc91efc6-0e22-4d79-b841-9c042da0da11",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ndim = 3  # number of dimensions\n",
+    "C = np.identity(ndim)  # set covariance to identity matrix\n",
+    "C[C==0] = 0.95  # set off-diagonal terms (strongly correlated)\n",
+    "Cinv = linalg.inv(C)  # precision matrix\n",
+    "lnorm = -0.5 * (np.log(2 * np.pi) * ndim + np.log(linalg.det(C)))  # ln(normalization)\n",
+    "\n",
+    "# 3-D correlated multivariate normal log-likelihood\n",
+    "def loglikelihood(x):\n",
+    "    \"\"\"Multivariate normal log-likelihood.\"\"\"\n",
+    "    return -0.5 * np.dot(x, np.dot(Cinv, x)) + lnorm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cc5cbe52-451d-4605-9f1a-34fd96fa9c58",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# prior transform\n",
+    "def prior_transform(u):\n",
+    "    \"\"\"Transforms our unit cube samples `u` to a flat prior between -10. and 10. in each variable.\"\"\"\n",
+    "    return 10. * (2. * u - 1.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "966f901e-2459-4f61-89af-2dc00db6cb85",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "iter: 50001 | batch: 22 | bound: 2 | nc: 1 | ncall: 877799 | eff(%):  5.696 | loglstar:   -inf < -0.407 < -1.059 | logz: -8.965 +/-  0.044 | stop:    nan                                             "
+     ]
+    }
+   ],
+   "source": [
+    "# initialize our nested sampler\n",
+    "dsampler = dynesty.DynamicNestedSampler(loglikelihood, prior_transform, ndim=3,\n",
+    "                                        bound='single', sample='unif', rstate=rstate)\n",
+    "dsampler.run_nested(maxiter=500, use_stop=False)\n",
+    "dres = dsampler.results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4ec696f2-2921-47ae-a95c-0cd161741548",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5ec0285b-14cd-4bf8-9761-b4163022121d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path = os.path.expandvars(\"$SCRATCH/data/monocle/test/deleteme_dynesty.dat\")\n",
+    "with open(path, 'wb') as file:\n",
+    "    pickle.dump(dres, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b92a966e-755a-4b23-9aca-bd481c92842c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with open(path, 'rb') as file:\n",
+    "    results_pkl = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2e3ed3ca-39d7-4c80-9eb8-9510c68161bb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary\n",
+      "=======\n",
+      "niter: 50001\n",
+      "ncall: 877799\n",
+      "eff(%):  5.696\n",
+      "logz: -8.923 +/-  0.043\n"
+     ]
+    }
+   ],
+   "source": [
+    "dres.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c4cf96ce-fa9a-4b7f-b356-473a1d51804d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['niter',\n",
+       " 'ncall',\n",
+       " 'eff',\n",
+       " 'samples',\n",
+       " 'samples_id',\n",
+       " 'samples_batch',\n",
+       " 'samples_it',\n",
+       " 'samples_u',\n",
+       " 'samples_n',\n",
+       " 'logwt',\n",
+       " 'logl',\n",
+       " 'logvol',\n",
+       " 'logz',\n",
+       " 'batch_nlive',\n",
+       " 'batch_bounds',\n",
+       " 'logzerr',\n",
+       " 'information',\n",
+       " 'bound',\n",
+       " 'bound_iter',\n",
+       " 'samples_bound',\n",
+       " 'scale']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dres.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47daf7ae-af71-4631-89bc-0d61403d84cc",
+   "metadata": {},
+   "source": [
+    "# Older stuff:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "aefbcac0-e20d-4484-9972-04981db937f3",
