--- a/Master-Plotting.ipynb
+++ b/Master-Plotting.ipynb
@@ -1412,7 +1412,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NERSC Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1426,7 +1426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
