Saving state of repo bc I'm about to take a wrecking ball to it

--- a/DR10.ipynb
+++ b/DR10.ipynb
@@ -2878,17 +2878,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed048c35-05bc-4049-9831-9928cc043246",
+   "metadata": {},
+   "source": [
+    "# Testing random stuff in sqlalchemy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ddbb6319-2a7f-4a12-89c7-b38f33ed901a",
+   "execution_count": 3,
+   "id": "ee6b0686-885c-48f6-ab62-fb6f3bb90679",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['SPS_HOME'] = \"/global/homes/e/eramey16/fsps\"\n",
+    "import sqlalchemy as sa\n",
+    "from sqlalchemy.pool import NullPool\n",
+    "import util"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "66869f4e-6f5a-4fbe-accc-8600b8919381",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "engine = sa.create_engine(util.conn_string, poolclass=NullPool)\n",
+    "\n",
+    "bktbl = sa.Table('bookkeeping', sa.MetaData(), autoload_with=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0e24c54f-45c1-47e8-82be-1620b74932bf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id', 'tbl_id', 'tbl_name', 'ls_id', 'created', 'stage', 'tag', 'train']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee6b0686-885c-48f6-ab62-fb6f3bb90679",
+   "id": "dd03d22e-5cc6-40fb-92c2-d9d1d4754580",
    "metadata": {},
    "outputs": [],
    "source": []
