--- a/DR10.ipynb
+++ b/DR10.ipynb
@@ -2,6 +2,165 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ed048c35-05bc-4049-9831-9928cc043246",
+   "metadata": {},
+   "source": [
+    "# Testing Classifier class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ee6b0686-885c-48f6-ab62-fb6f3bb90679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['SPS_HOME'] = \"/global/homes/e/eramey16/fsps\"\n",
+    "import sqlalchemy as sa\n",
+    "from sqlalchemy.pool import NullPool\n",
+    "from docker import db_util as util\n",
+    "import pandas as pd\n",
+    "import importlib\n",
+    "import logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ddc59311-0a67-4e90-bafa-9eab234e2235",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "meta = sa.MetaData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "66869f4e-6f5a-4fbe-accc-8600b8919381",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "engine = sa.create_engine(util.conn_string, poolclass=NullPool)\n",
+    "\n",
+    "bk_tbl = sa.Table('bookkeeping', meta, autoload_with=engine)\n",
+    "gal_tbl = sa.Table('dr10_training', meta, autoload_with=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "814377f1-b467-4918-a288-73ec3ba45121",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id', 'tbl_id', 'tbl_name', 'ls_id', 'created', 'stage', 'tag', 'train']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x.name for x in bk_tbl.columns.values()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0e24c54f-45c1-47e8-82be-1620b74932bf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "stmt = sa.select(bk_tbl).where(bk_tbl.c.ls_id==10995549460239206)\n",
+    "with engine.connect() as conn:\n",
+    "    bk_data = pd.DataFrame(conn.execute(stmt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5a4c485c-ec2e-4b50-9da4-0e82606e692d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from docker.classify import Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6e857cd5-5644-4109-8490-dea91ff95d8c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'logging' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m classy \u001b[38;5;241m=\u001b[39m Classifier(logger\u001b[38;5;241m=\u001b[39m\u001b[43mlogging\u001b[49m\u001b[38;5;241m.\u001b[39mgetLogger(level\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdebug\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m      2\u001b[0m x1, x2 \u001b[38;5;241m=\u001b[39m classy\u001b[38;5;241m.\u001b[39mget_galaxy(ls_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10995426317567295\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'logging' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "classy = Classifier(logger=logging.DEBUG)\n",
+    "x1, x2 = classy.get_galaxy(ls_id=10995426317567295)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "aecf0a20-4d39-4c80-9c18-7e8c21ccad26",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "gal_data = classy.query_galaxy(ls_id=10995426316525910)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "491d4769-e827-4e32-abe3-1580cc34aa17",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded observation\n",
+      "Loaded SPS libraries\n"
+     ]
+    }
+   ],
+   "source": [
+    "classy.run_prospector(gal_data.iloc[0], outfile='test.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a44195a3-38c7-49b7-aa90-0b93882d8cae",
    "metadata": {
     "tags": []
@@ -2878,66 +3037,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ed048c35-05bc-4049-9831-9928cc043246",
-   "metadata": {},
-   "source": [
-    "# Testing random stuff in sqlalchemy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ee6b0686-885c-48f6-ab62-fb6f3bb90679",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ['SPS_HOME'] = \"/global/homes/e/eramey16/fsps\"\n",
-    "import sqlalchemy as sa\n",
-    "from sqlalchemy.pool import NullPool\n",
-    "import util"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "66869f4e-6f5a-4fbe-accc-8600b8919381",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "engine = sa.create_engine(util.conn_string, poolclass=NullPool)\n",
-    "\n",
-    "bktbl = sa.Table('bookkeeping', sa.MetaData(), autoload_with=engine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "0e24c54f-45c1-47e8-82be-1620b74932bf",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['id', 'tbl_id', 'tbl_name', 'ls_id', 'created', 'stage', 'tag', 'train']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd03d22e-5cc6-40fb-92c2-d9d1d4754580",
+   "id": "2a14ca70-f752-41de-819d-c39054737d77",
    "metadata": {},
    "outputs": [],
    "source": []
