--- a/DR10.ipynb
+++ b/DR10.ipynb
@@ -275,7 +275,7 @@
     "# Prepping new run of DR10 data:\n",
     "4/8/24\n",
     "\n",
-    "Updated 11/25/24 with LRGS"
+    "### Updated 11/25/24 with LRGS"
    ]
   },
   {
@@ -299,6 +299,115 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d603eac4-6c51-4927-8c4f-59fc3b48f4d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lrg_file = os.path.expandvars(\"$PSCRATCH/data/monocle/LRGs/lensed_LRGs.dat\")\n",
+    "command_file = os.path.expandvars(\"$PSCRATCH/data/monocle/LRGs/lensed_LRG_job.sl\")\n",
+    "\n",
+    "header = \"\"\"#!/bin/bash\n",
+    "#SBATCH -C cpu\n",
+    "#SBATCH -N 1\n",
+    "#SBATCH --licenses=cfs,SCRATCH\n",
+    "#SBATCH -q regular\n",
+    "#SBATCH -t 20:00:00\n",
+    "#SBATCH -A m2218\n",
+    "#SBATCH --image=eramey16/monocle:latest --volume=/pscratch/sd/e/eramey16/data/monocle/LRGs:/monocle/exports\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "lrgs = pd.read_csv(lrg_file)\n",
+    "stmt = \"srun -n 32 shifter python $HOME/galactic_lenses/docker/classify.py -t lensed_LRG --train -tn lrg_train -l \"\n",
+    "lrg_commands = stmt + lrgs.ls_id.astype(str)\n",
+    "# num_files = int(len(lrg_commands)/25)\n",
+    "# idxs = np.linspace(0, len(lrg_commands), num_files+1).astype(int)\n",
+    "# for i in range(num_files):\n",
+    "#     short_commands = lrg_commands.iloc[idxs[i]:idxs[i+1]]\n",
+    "    # short_commands.to_csv(command_file+f\"_{i}.sh\", index=False, header=False)\n",
+    "# lrg_commands.to_csv(command_file, index=False, header=False)\n",
+    "# with open(command_file, 'w') as file:\n",
+    "#     file.write(header+'\\n'.join(lrg_commands))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f9987fbf-0c07-4176-b77b-623a131aa3b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to start MPI; are mpi4py and schwimmbad installed?Proceeding without MPI.\n",
+      "Message: libmpi.so.12: cannot open shared object file: No such file or directory\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'time' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[0;32m/global/u1/e/eramey16/galactic_lenses/docker/classify.py:86\u001b[0m, in \u001b[0;36mClassifier.parallel_setup\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmpi4py\u001b[39;00m\n\u001b[0;32m---> 86\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmpi4py\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MPI\n\u001b[1;32m     87\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mschwimmbad\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MPIPool\n",
+      "\u001b[0;31mImportError\u001b[0m: libmpi.so.12: cannot open shared object file: No such file or directory",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m classy \u001b[38;5;241m=\u001b[39m \u001b[43mclassify\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mClassifier\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m unused_lsids \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m ls_id \u001b[38;5;129;01min\u001b[39;00m lrgs\u001b[38;5;241m.\u001b[39mls_id:\n",
+      "File \u001b[0;32m/global/u1/e/eramey16/galactic_lenses/docker/classify.py:69\u001b[0m, in \u001b[0;36mClassifier.__init__\u001b[0;34m(self, output_dir, gal_df, trac_table, phot_table, query_cols, engine, prosp_package, code_dir, logger)\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgal_data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame() \u001b[38;5;66;03m# column names?\u001b[39;00m\n\u001b[0;32m---> 69\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparallel_setup\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m engine \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m (\u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwithmpi \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrank\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mengine \u001b[38;5;241m=\u001b[39m sa\u001b[38;5;241m.\u001b[39mcreate_engine(util\u001b[38;5;241m.\u001b[39mconn_string, poolclass\u001b[38;5;241m=\u001b[39mNullPool, future\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m/global/u1/e/eramey16/galactic_lenses/docker/classify.py:108\u001b[0m, in \u001b[0;36mClassifier.parallel_setup\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    106\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrank \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    107\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcomm \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m--> 108\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;241m=\u001b[39m \u001b[43mtime\u001b[49m\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m    109\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwithmpi\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "classy = classify.Classifier()\n",
+    "unused_lsids = []\n",
+    "for ls_id in lrgs.ls_id:\n",
+    "    try:\n",
+    "        bkdata, tbldata = classy.get_galaxy(ls_id, tag='lensed_LRG')\n",
+    "        if bkdata.stage[0]!=2: unused_lsids.append(ls_id)\n",
+    "    except:\n",
+    "        unused_lsids.append(ls_id)\n",
+    "len(unused_lsids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "78976a1f-6d79-4399-b0aa-64df4cb50219",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "756"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lrgs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f4df872-8910-4242-9e2f-cc79c9e6a99e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ----------------------------------------------"
    ]
   },
   {
