My own training works without aug, runs on the GPU from file

--- a/Test_ML.ipynb
+++ b/Test_ML.ipynb
@@ -13,15 +13,7 @@
    "execution_count": 1,
    "id": "6932aaa6-cf9c-43e1-b541-ac9298d3bf24",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "os.environ[\"SPS_HOME\"] = '/global/homes/e/eramey16/fsps/'\n",
@@ -30,7 +22,7 @@
     "import pandas as pd\n",
     "# import util\n",
     "import matplotlib.pyplot as plt\n",
-    "import util\n",
+    "# import util\n",
     "\n",
     "from sqlalchemy import create_engine, Column, Table, MetaData, insert\n",
     "from sqlalchemy.types import BIGINT, FLOAT, REAL, VARCHAR, BOOLEAN\n",
@@ -39,7 +31,106 @@
     "data_dir = \"/pscratch/sd/e/eramey16/data/monocle/cosmos_160/\"\n",
     "seed = 42\n",
     "\n",
-    "conn_string = 'postgresql+psycopg2://lensed_db_admin@nerscdb03.nersc.gov/lensed_db'"
+    "conn_string = 'postgresql+psycopg2://lensed_db_admin@nerscdb03.nersc.gov/lensed_db'\n",
+    "from ML_final_model import ModelTrainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3d3d7029",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f1</th>\n",
+       "      <th>f2</th>\n",
+       "      <th>aug_idx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   f1  f2  aug_idx\n",
+       "1   2   5        1\n",
+       "2   3   6        2\n",
+       "4   2   5        1\n",
+       "5   3   6        2\n",
+       "7   2   5        1\n",
+       "8   3   6        2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = pd.DataFrame({'f1':[1, 2, 3], 'f2':[4, 5, 6]})\n",
+    "\n",
+    "mt = ModelTrainer(model_type='XGB', tbl_name='lrg_train')\n",
+    "x_aug = mt._augment_data(x)\n",
+    "\n",
+    "train_idx = np.array([1, 2])\n",
+    "x_aug[x_aug.aug_idx.isin(train_idx)]"
    ]
   },
   {
@@ -1051,9 +1142,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MyProspector",
+   "display_name": "astroconda",
    "language": "python",
-   "name": "myprospector"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1065,7 +1156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
