Model runs with augmentation

--- a/Test_ML.ipynb
+++ b/Test_ML.ipynb
@@ -134,6 +134,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e764f88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 0])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_proba = np.array([.6, .1, .8]).reshape(1, -1)\n",
+    "thresh = np.array([.5, .6, .7, .8], ndmin=2).reshape(-1,1)\n",
+    "y_pred = y_pred_proba > thresh\n",
+    "y_pred.shape, y_pred_proba.shape, thresh.shape\n",
+    "\n",
+    "y_true = np.array([1, 0, 0]).reshape(1, -1)\n",
+    "tp = y_true & y_pred\n",
+    "tn = ~y_true & ~y_pred\n",
+    "fp = ~y_true & y_pred\n",
+    "fn = y_true & ~y_pred\n",
+    "y_pred, fp, fn\n",
+    "np.sum(fp, axis=1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e4690b5c-9671-48c1-9df2-6e896b9f673b",
    "metadata": {},
